# big_dataSP24

./: .gitignore  README.md  SYLLABUS.md  pyproject.toml
Models/: 240225_wine_classifier.json  240225_wine_classifier_metadata.json
Week 3/: ml_classifier.py
big_dataSP24/Week 1/: docstrings.py
big_dataSP24/Week 2/: read_data.py
big_dataSP24/Week 3/: basicml.py
big_dataSP24/final_week/: website_example.py
big_dataSP24/nn_files/: data_iterator.py  layer.py  loss.py  mlp.py  train_nn.py
big_dataSP24/templates/: etim.html
big_dataSP24/tensortango/: autoencoder.py  data_iterator.py  layer.py  loss.py  mlp.py  optimizer.py  tensortango_autoencoder.py  train_nn.py
big_dataSP24/week1/: docstrings.py
big_dataSP24/week11/: boston.py
big_dataSP24/week3/: reusable_classifier.py
big_dataSP24/week4/: read_data.py  read_wine_data.py  wine_classifier.py
big_dataSP24/week5/: combine_dfs.py  distances.py  npi_classifier.py  npi_reader.py  wordmashup.py
big_dataSP24/week6/: grants_reader.py  npi_reader.py  string_distance_features.py
big_dataSP24/week7/: db_creation.py  grant_doc_db.py  grant_doc_db_creation.py  sqlite_example.py
big_dataSP24/week8/: networks.py
scripts/: train_nn.py  train_npi_classifier.py  train_wine_classifier.py  train_wine_nn.py
