[tool.poetry]
name = "big-datasp24"
version = "0.1.0"
description = ""
authors = ["shearere2 <shearere2@duq.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.0"
xgboost = "^2.0.3"
scikit-learn = "^1.4.1.post1"
fasttext = {git = "https://github.com/cfculhane/fastText"}
jarowinkler = "^2.0.1"
pyarrow = "^15.0.0"
sentence-transformers = "^2.5.1"
sqlalchemy = "^2.0.28"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
